<?xml version="1.0" encoding="utf-8"?>
<!--
    This layout defines the main activity screen and displays a list of tasks (if they exist),
    and a floating action button that launches another activity.
-->
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="320dp"
        android:paddingLeft="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/position_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingLeft="40dp"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            android:text="@string/position_name_hint" />

        <TextView
            android:id="@+id/item_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            android:text="@string/item_hint" />

        <TextView
            android:id="@+id/date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="22dp"
            android:textColor="@android:color/black"
            android:contentDescription="@string/quantity_hint"
            android:text="@string/date_hint" />

        <TextView
            android:id="@+id/difference_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/quantity_hint"
            android:textAlignment="center"
            android:paddingLeft="10dp"
            android:paddingRight="5dp"
            android:text="@string/difference_hint_short"
            android:textColor="@android:color/black"
            android:textSize="22dp" />

    </LinearLayout>
    <!-- RecyclerView that is responsible for holding a list of task data -->
    <android.support.v7.widget.RecyclerView
        android:id="@+id/all_guests_list_view"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="8dp"/>

    <!-- Floating action button that launches AddTaskActivity when clicked -->
    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        app:srcCompat="@android:drawable/ic_input_add"
        android:tint="@android:color/white"/>

</FrameLayout>
<!--<?xml version="1.0" encoding="utf-8"?>-->
<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools"-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent"-->
    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
    <!--android:orientation="vertical"-->
    <!--android:padding="@dimen/activity_horizontal_margin"-->
    <!--tools:context="com.example.android.waitlist.MainActivity">-->




    <!--&lt;!&ndash;<Button&ndash;&gt;-->
        <!--&lt;!&ndash;android:id="@+id/add_to_waitlist_button"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_width="match_parent"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_height="wrap_content"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginBottom="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:layout_marginTop="8dp"&ndash;&gt;-->
        <!--&lt;!&ndash;android:background="@color/colorPrimary"&ndash;&gt;-->
        <!--&lt;!&ndash;android:onClick="addToWaitlist"&ndash;&gt;-->
        <!--&lt;!&ndash;android:text="@string/add_button_text"&ndash;&gt;-->
        <!--&lt;!&ndash;android:textAppearance="@style/TextAppearance.AppCompat.Widget.Button.Inverse" />&ndash;&gt;-->

    <!--<android.support.v7.widget.RecyclerView-->
        <!--android:id="@+id/all_guests_list_view"-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="match_parent" />-->

    <!--&lt;!&ndash; Floating action button that launches AddTaskActivity when clicked &ndash;&gt;-->
    <!--<android.support.design.widget.FloatingActionButton-->
        <!--android:id="@+id/fab"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="bottom|end"-->
        <!--android:layout_margin="16dp"-->
        <!--app:srcCompat="@android:drawable/ic_input_add"-->
        <!--android:tint="@android:color/white"/>-->

<!--</LinearLayout>-->
