<?xml version="1.0" encoding="utf-8"?>
<!--
    This vertical linear layout contains all the views in the AddTaskActivity code.
    This includes an EditText to add a task description, and buttons to select a priority
-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/activity_horizontal_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingStart="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="Position"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/editTextTaskDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/position_name_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="Item"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/item_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/item_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>
    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="Stock"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/quantity_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/item_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>
    <!-- TextView and FrameLayout (which contains buttons) for Priority Selection -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="Quantity"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/stock_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/item_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="WMS"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/WMS_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/item_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:textColor="@android:color/primary_text_light"
        style="@style/TextAppearance.AppCompat.Medium"
        android:text="Difference"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"/>

    <EditText
        android:id="@+id/difference_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start"
        android:hint="@string/item_hint"
        android:paddingBottom ="@dimen/activity_horizontal_margin"/>
    <!-- Add button -->
    <Button
        android:id="@+id/addButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/add_button_text"
        style="@style/TextAppearance.AppCompat.Large"
        android:textColor="@android:color/primary_text_dark"
        android:background="@color/colorPrimary"
        android:onClick="addToDB"/>

</LinearLayout>